converting over to grid

--- a/discover.html
+++ b/discover.html
@@ -47,60 +47,46 @@
             </div>
 
             <div class="destination_wrapper">
-                <a class="main_destination-link" href="https://www.lonelyplanet.com/japan/kansai/kyoto" target="_blank">
-                    <div class="destination_post destination_one">
-                        <div class="content_wrapper">
-                            <h2 class="post_title destination_title">Kyoto</h2>
-                        </div>
+                <a class="destination_link destination_one" href="https://www.lonelyplanet.com/japan/kansai/kyoto" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title destination_title">Kyoto</h2>
                     </div>
                 </a>
 
-                <a class="post_link destination_two-link" href="https://www.lonelyplanet.com/japan/tokyo" target="_blank">
-                    <div class="destination_post destination_two">
-                        <div class="content_wrapper">
-                            <h2 class="post_title destination_title">Tokyo</h2>
-                        </div>
+                <a class="destination_link destination_two" href="https://www.lonelyplanet.com/japan/tokyo" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title destination_title">Tokyo</h2>
                     </div>
                 </a>
 
-                <a class="post_link destination_three-link" href="https://www.lonelyplanet.com/japan/west-of-tokyo/mt-fuji" target="_blank">
-                    <div class="destination_post destination_three">
-                        <div class="content_wrapper">
-                            <h2 class="post_title destination_title">Mt Fuji</h2>
-                        </div>
+                <a class="destination_link destination_three" href="https://www.lonelyplanet.com/japan/west-of-tokyo/mt-fuji" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title destination_title">Mt Fuji</h2>
                     </div>
                 </a>
 
-                <a class="post_link destination_four-link" href="https://www.lonelyplanet.com/japan/hiroshima" target="_blank">
-                    <div class="destination_post destination_four">
-                        <div class="content_wrapper">
-                            <h2 class="post_title destination_title">Hiroshima</h2>
-                        </div>
+                <a class="destination_link destination_four" href="https://www.lonelyplanet.com/japan/hiroshima" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title destination_title">Hiroshima</h2>
                     </div>
                 </a>
 
-                <a class="post_link destination_five-link" href="https://www.lonelyplanet.com/japan/hokkaido" target="_blank"> 
-                    <div class="destination_post destination_five">
-                        <div class="content_wrapper">
-                            <h2 class="post_title destination_title">Hokkaido</h2>
-                        </div>
+                <a class="destination_link destination_five" href="https://www.lonelyplanet.com/japan/hokkaido" target="_blank">             
+                    <div class="content_wrapper">
+                        <h2 class="post_title destination_title">Hokkaido</h2>
+                    </div>             
+                </a>
+
+                <a class="destination_link destination_six" href="https://www.lonelyplanet.com/japan/shikoku" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title destination_title">Shikoku</h2>
                     </div>
                 </a>
 
-                <a class="post_link destination_six-link" href="https://www.lonelyplanet.com/japan/shikoku" target="_blank">
-                    <div class="destination_post destination_six">
-                        <div class="content_wrapper">
-                            <h2 class="post_title destination_title">Shikoku</h2>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="post_link destination_seven-link" href="https://www.lonelyplanet.com/japan/okinawa-and-the-southwest-islands/yakushima" target="_blank">
-                    <div class="destination_post destination_seven">
-                        <div class="content_wrapper">
-                            <h2 class="post_title">Yakushima</h2>
-                        </div>
-                    </div>
+                <a class="destination_link destination_seven" href="https://www.lonelyplanet.com/japan/okinawa-and-the-southwest-islands/yakushima" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title">Yakushima</h2>
+                    </div>    
                 </a>
             </div>
         </section>
@@ -112,43 +98,33 @@
             </div>
 
             <div class="activities_wrapper">
-                <a class="main_activity-link" href="https://www.lonelyplanet.com/japan/activities/nikko-national-park-day-trip-from-tokyo/a/pa-act/v-2142TYO_F300_F308/356635" target="_blank">
-                    <div class="activities_post activity_one">
-                        <div class="content_wrapper">
-                            <h2 class="post_title">Nikko National Park Day Trip from Tokyo</h2>
-                        </div>
+                <a class="activity_link activity_one" href="https://www.lonelyplanet.com/japan/activities/nikko-national-park-day-trip-from-tokyo/a/pa-act/v-2142TYO_F300_F308/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title activity_title">Nikko National Park Day Trip from Tokyo</h2>
                     </div>
                 </a>
 
-                <a class="post_link activity_two-link" href="https://www.lonelyplanet.com/japan/activities/mt-fuji-day-trip-with-lake-ashi-sightseeing-cruise-from-tokyo/a/pa-act/v-2142TYO_F880_F830/356635" target="_blank">
-                    <div class="activities_post activity_two">
-                        <div class="content_wrapper">
-                            <h2 class="post_title">Mt Fuji Day Trip with Lake Ashi Sightseeing Cruise from Tokyo</h2>
-                        </div>
+                <a class="activity_link activity_two" href="https://www.lonelyplanet.com/japan/activities/mt-fuji-day-trip-with-lake-ashi-sightseeing-cruise-from-tokyo/a/pa-act/v-2142TYO_F880_F830/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title activity_title">Mt Fuji Day Trip with Lake Ashi Sightseeing Cruise from Tokyo</h2>
                     </div>
                 </a>
 
-                <a class="post_link activity_three-link" href="https://www.lonelyplanet.com/japan/activities/tokyo-sumo-wrestling-tournament/a/pa-act/v-2142TYO_F550/356635" target="_blank">
-                    <div class="activities_post activity_three">
-                        <div class="content_wrapper">
-                            <h2 class="post_title">Tokyo Sumo Wrestling Tournament</h2>
-                        </div>
+                <a class="activity_link activity_three" href="https://www.lonelyplanet.com/japan/activities/tokyo-sumo-wrestling-tournament/a/pa-act/v-2142TYO_F550/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title activity_title">Tokyo Sumo Wrestling Tournament</h2>
                     </div>
                 </a>
 
-                <a class="post_link activity_four-link" href="https://www.lonelyplanet.com/japan/activities/tokyo-by-night-japanese-food-tour/a/pa-act/v-5263JPUC/356635" target="_blank">
-                    <div class="activities_post activity_four">
-                        <div class="content_wrapper">
-                            <h2 class="post_title">Tokyo by Night: Japanese Food Tour</h2>
-                        </div>
+                <a class="activity_link activity_four" href="https://www.lonelyplanet.com/japan/activities/tokyo-by-night-japanese-food-tour/a/pa-act/v-5263JPUC/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title activity_title">Tokyo by Night: Japanese Food Tour</h2>
                     </div>
                 </a>
 
-                <a class="post_link activity_five-link" href="https://www.lonelyplanet.com/japan/activities/tokyo-tower-tea-ceremony-and-sumida-river-cruise-day-tour/a/pa-act/v-2142TYO_A100/356635" target="_blank">
-                    <div class="activities_post activity_five">
-                        <div class="content_wrapper">
-                            <h2 class="post_title">Tokyo Tower, Tea Ceremony and Sumida River Cruise Day Tour</h2>
-                        </div>
+                <a class="activity_link activity_five" href="https://www.lonelyplanet.com/japan/activities/tokyo-tower-tea-ceremony-and-sumida-river-cruise-day-tour/a/pa-act/v-2142TYO_A100/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title activity_title">Tokyo Tower, Tea Ceremony and Sumida River Cruise Day Tour</h2>
                     </div>
                 </a>
 
@@ -162,43 +138,33 @@
             </div>
 
             <div class="restaurants_wrapper">
-                <a class="main_restaurant-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/sushi-dai/a/poi-eat/1608366/356635" target="_blank">
-                    <div class="restaurants_post restaurant-one">
-                        <div class="content_wrapper">
-                            <h2 class="post_title restaurant_title">Sushi Dai</h2>
-                        </div>
+                <a class="restaurant_link restaurant_one" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/sushi-dai/a/poi-eat/1608366/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Sushi Dai</h2>
                     </div>
                 </a>
 
-                <a class="post_link restaurant_two-link " href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
-                    <div class="restaurants_post restaurant-two">
-                        <div class="content_wrapper">
-                            <h2 class="post_title restaurant_title">Kawashima Tōfu</h2>
-                        </div>
+                <a class="restaurant_link restaurant_two-link " href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Kawashima Tōfu</h2>
                     </div>
                 </a>
 
-                <a class="post_link restaurant_three-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
-                    <div class="restaurants_post restaurant-three">
-                        <div class="content_wrapper">
-                            <h2 class="post_title restaurant_title">Inua</h2>
-                        </div>
+                <a class="restaurant_link restaurant_three-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Inua</h2>
                     </div>
                 </a>
 
-                <a class="post_link restaurant_four-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
-                    <div class="restaurants_post restaurant-four">
-                        <div class="content_wrapper">
-                            <h2 class="post_title restaurant_title">Kikunoi</h2>
-                        </div>
+                <a class="restaurant_link restaurant_four-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Kikunoi</h2>
                     </div>
                 </a>
 
-                <a class="post_link restaurant_five-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
-                    <div class="restaurants_post restaurant-five">
-                        <div class="content_wrapper">
-                            <h2 class="post_title restaurant_title">Tofuya-Ukai</h2>
-                        </div>
+                <a class="restaurant_link restaurant_five-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Tofuya-Ukai</h2>
                     </div>
                 </a>
             </div>
