--- a/discover.html
+++ b/discover.html
@@ -49,43 +49,43 @@
             <div class="destination_wrapper">
                 <a class="destination_link destination_one" href="https://www.lonelyplanet.com/japan/kansai/kyoto" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title destination_title">Kyoto</h2>
+                        <h2 class="destination_title">Kyoto</h2>
                     </div>
                 </a>
 
                 <a class="destination_link destination_two" href="https://www.lonelyplanet.com/japan/tokyo" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title destination_title">Tokyo</h2>
+                        <h2 class="destination_title">Tokyo</h2>
                     </div>
                 </a>
 
                 <a class="destination_link destination_three" href="https://www.lonelyplanet.com/japan/west-of-tokyo/mt-fuji" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title destination_title">Mt Fuji</h2>
+                        <h2 class="destination_title">Mt Fuji</h2>
                     </div>
                 </a>
 
                 <a class="destination_link destination_four" href="https://www.lonelyplanet.com/japan/hiroshima" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title destination_title">Hiroshima</h2>
+                        <h2 class="destination_title">Hiroshima</h2>
                     </div>
                 </a>
 
                 <a class="destination_link destination_five" href="https://www.lonelyplanet.com/japan/hokkaido" target="_blank">             
                     <div class="content_wrapper">
-                        <h2 class="post_title destination_title">Hokkaido</h2>
+                        <h2 class="destination_title">Hokkaido</h2>
                     </div>             
                 </a>
 
                 <a class="destination_link destination_six" href="https://www.lonelyplanet.com/japan/shikoku" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title destination_title">Shikoku</h2>
+                        <h2 class="destination_title">Shikoku</h2>
                     </div>
                 </a>
 
                 <a class="destination_link destination_seven" href="https://www.lonelyplanet.com/japan/okinawa-and-the-southwest-islands/yakushima" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title">Yakushima</h2>
+                        <h2 class="destination_title">Yakushima</h2>
                     </div>    
                 </a>
             </div>
@@ -140,31 +140,31 @@
             <div class="restaurants_wrapper">
                 <a class="restaurant_link restaurant_one" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/sushi-dai/a/poi-eat/1608366/356635" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title restaurant_title">Sushi Dai</h2>
+                        <h2 class="restaurant_title">Sushi Dai</h2>
                     </div>
                 </a>
 
-                <a class="restaurant_link restaurant_two-link " href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
+                <a class="restaurant_link restaurant_two" href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title restaurant_title">Kawashima Tōfu</h2>
+                        <h2 class="restaurant_title">Kawashima Tōfu</h2>
                     </div>
                 </a>
 
-                <a class="restaurant_link restaurant_three-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
+                <a class="restaurant_link restaurant_three" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title restaurant_title">Inua</h2>
+                        <h2 class="restaurant_title">Inua</h2>
                     </div>
                 </a>
 
-                <a class="restaurant_link restaurant_four-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
+                <a class="restaurant_link restaurant_four" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title restaurant_title">Kikunoi</h2>
+                        <h2 class="restaurant_title">Kikunoi</h2>
                     </div>
                 </a>
 
-                <a class="restaurant_link restaurant_five-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
+                <a class="restaurant_link restaurant_five" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
                     <div class="content_wrapper">
-                        <h2 class="post_title restaurant_title">Tofuya-Ukai</h2>
+                        <h2 class="restaurant_title">Tofuya-Ukai</h2>
                     </div>
                 </a>
             </div>
