--- a/subscribe.html
+++ b/subscribe.html
@@ -18,20 +18,22 @@
     <main>
         <nav class="main_nav">
             <input type="checkbox" id="nav" class="hidden">
-            <label for="nav" class="nav_button">
-                <i></i>
-                <i></i>
-                <i></i>
-            </label>
+            <div class="nav_menu-wrapper">
+                <label for="nav" class="nav_button">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </label>
+            </div>
             <div class="logo_wrapper">
                 <img class="logo_image" src="../assets/images/logo.jpg" alt="Logo">
-                <a class="logo_text" href="/index.html"><div>explore</div></a>
+                <a class="logo_text" href="#"><div>explore</div></a>
             </div>
             <div class="nav_list-wrapper">
                 <ul class="nav_list">
-                    <li class="nav_list-items fade"><a class="list_item-link" href="/index.html">Home</a></li>
-                    <li class="nav_list-items fade"><a class="list_item-link" href="/discover.html">Discover</a></li>
-                    <li class="nav_list-items"><a class="list_item-link" href="#">Newsletter</a></li>
+                    <li class="nav_list-items"><a class="item_link" href="/index.html">Home</a></li>
+                    <li class="nav_list-items"><a class="item_link" href="/discover.html">Discover</a></li>
+                    <li class="nav_list-items"><a class="item_link" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </div>
         </nav>
@@ -75,7 +77,7 @@
                 <ul class="footer_nav--list">
                     <li><a class="footer_nav--item" href="/index.html">Home</a></li>
                     <li><a class="footer_nav--item" href="/discover.html">Discover</a></li>
-                    <li><a class="footer_nav--item" href="#">Food</a></li>
+                    <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </nav>
             <div class="footer_icon--list">
