renamed my divider section on discover page for better semantic meaning

--- a/discover.html
+++ b/discover.html
@@ -41,7 +41,6 @@
         <h1 class="header_title">Discover Japan</h1>
     </header>
 
-    
     <section class="destination_section">
         <div class="section_labels">
             <h2 class="section_title">Top Destinations</h2>
@@ -172,10 +171,10 @@
         </div>
     </section>
 
-    <section class="divider_section">
-        <div class="divider_content">
-            <h2 class="divider_title">Stay Connected With All Things Japan</h2>
-            <a class="divider_button" href="/subscribe.html">Subscribe To Our Newsletter</a>
+    <section class="subscribe_section">
+        <div class="subscribe_content">
+            <h2 class="subscribe_title">Stay Connected With All Things Japan</h2>
+            <a class="subscribe_button" href="/subscribe.html">Subscribe To Our Newsletter</a>
         </div>
     </section>
     
