--- a/discover.html
+++ b/discover.html
@@ -26,7 +26,7 @@
         </div>
         <div class="logo_wrapper">
             <img class="logo_image" src="../assets/images/logo.jpg" alt="Logo">
-            <a class="logo_text" href="#"><div>explore</div></a>
+            <a class="logo_text" href="/index.html"><div>explore</div></a>
         </div>
         <div class="nav_list-wrapper">
             <ul class="nav_list">
