created laptop styles using media queries

--- a/discover.html
+++ b/discover.html
@@ -101,31 +101,31 @@
         <div class="activities_wrapper">
             <a class="activity_link activity_one" href="https://www.lonelyplanet.com/japan/activities/nikko-national-park-day-trip-from-tokyo/a/pa-act/v-2142TYO_F300_F308/356635" target="_blank">
                 <div class="content_wrapper">
-                    <h2 class="post_title activity_title">Nikko National Park Day Trip from Tokyo</h2>
+                    <h2 class="activity_title">Nikko National Park Day Trip from Tokyo</h2>
                 </div>
             </a>
 
             <a class="activity_link activity_two" href="https://www.lonelyplanet.com/japan/activities/mt-fuji-day-trip-with-lake-ashi-sightseeing-cruise-from-tokyo/a/pa-act/v-2142TYO_F880_F830/356635" target="_blank">
                 <div class="content_wrapper">
-                    <h2 class="post_title activity_title">Mt Fuji Day Trip with Lake Ashi Sightseeing Cruise from Tokyo</h2>
+                    <h2 class="activity_title">Mt Fuji Day Trip with Lake Ashi Sightseeing Cruise from Tokyo</h2>
                 </div>
             </a>
 
             <a class="activity_link activity_three" href="https://www.lonelyplanet.com/japan/activities/tokyo-sumo-wrestling-tournament/a/pa-act/v-2142TYO_F550/356635" target="_blank">
                 <div class="content_wrapper">
-                    <h2 class="post_title activity_title">Tokyo Sumo Wrestling Tournament</h2>
+                    <h2 class="activity_title">Tokyo Sumo Wrestling Tournament</h2>
                 </div>
             </a>
 
             <a class="activity_link activity_four" href="https://www.lonelyplanet.com/japan/activities/tokyo-by-night-japanese-food-tour/a/pa-act/v-5263JPUC/356635" target="_blank">
                 <div class="content_wrapper">
-                    <h2 class="post_title activity_title">Tokyo by Night: Japanese Food Tour</h2>
+                    <h2 class="activity_title">Tokyo by Night: Japanese Food Tour</h2>
                 </div>
             </a>
 
             <a class="activity_link activity_five" href="https://www.lonelyplanet.com/japan/activities/tokyo-tower-tea-ceremony-and-sumida-river-cruise-day-tour/a/pa-act/v-2142TYO_A100/356635" target="_blank">
                 <div class="content_wrapper">
-                    <h2 class="post_title activity_title">Tokyo Tower, Tea Ceremony and Sumida River Cruise Day Tour</h2>
+                    <h2 class="activity_title">Tokyo Tower, Tea Ceremony and Sumida River Cruise Day Tour</h2>
                 </div>
             </a>
 
