fixed responsive bugs for overlays on main article section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h3 class="post_heading">Exploring Ise-Shima: getting off the beaten track in Kansai:</h3>
                         <p class="post_description">Ise-Shima is famous as the home of Ise-jingū, one of Japan's
                             most revered Shintō shrines, and for many travellers the shrine might be all they see of
-                            the area. With its ama diving culture, island life, and museums, there's plenty more to discover in this off-the-beaten-track corner of Kansai.
+                            the area. With its ama diving culture, island life, and museums.
                         </p>
                     </div>
                 </a>
@@ -138,8 +138,7 @@
                         <p class="post_description">Lonely Planet Local Rebecca Milner moved to Tokyo for ‘just one
                             year'… 15 years ago. She was drawn by the city’s larger-than-life image – all those
                             bright lights and busy streets – but was surprised to discover just how liveable Tokyo
-                            really is. She spends her days wandering the back streets, tracking down new restaurants
-                            and writing in cafes.</p>
+                            really is.</p>
                     </div>
                 </a>
 
