fixed article section bugs and content bugs:

--- a/subscribe.html
+++ b/subscribe.html
@@ -64,7 +64,7 @@
 
     <section class="contact_section-wrapper">
         <div class="contact_wrapper">
-            <h2 class="contact_heading">Connect with us social media</h2>
+            <h2 class="contact_heading">Connect with us on social media</h2>
             <p class="contact_subtext">linked down below</p>
         </div>
     </section>
