--- a/discover.html
+++ b/discover.html
@@ -31,7 +31,7 @@
         <div class="nav_list-wrapper">
             <ul class="nav_list">
                 <li class="nav_list-items"><a class="item_link" href="/index.html">Home</a></li>
-                <li class="nav_list-items"><a class="item_link" href="/discover.html">Discover</a></li>
+                <li class="nav_list-items"><a class="item_link active" href="/discover.html">Discover</a></li>
                 <li class="nav_list-items"><a class="item_link" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
