--- a/subscribe.html
+++ b/subscribe.html
@@ -31,7 +31,7 @@
             <ul class="nav_list">
                 <li class="nav_list-items"><a class="item_link" href="/index.html">Home</a></li>
                 <li class="nav_list-items"><a class="item_link" href="/discover.html">Discover</a></li>
-                <li class="nav_list-items"><a class="item_link" href="/subscribe.html">Newsletter</a></li>
+                <li class="nav_list-items"><a class="item_link active" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
     </nav>
