added a home button to index to keep design consistent

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
             <div class="nav_list-wrapper">
                 <ul class="nav_list">
+                    <li class="nav_list-items"><a class="item_link active" href="/index.html">Home</a></li>
                     <li class="nav_list-items"><a class="item_link" href="/discover.html">Discover</a></li>
                     <li class="nav_list-items"><a class="item_link" href="/subscribe.html">Newsletter</a></li>
                 </ul>
